[gd_scene load_steps=5 format=3 uid="uid://c766xq0o18c6i"]

[ext_resource type="AudioStream" uid="uid://cis0rd3c3scvt" path="res://music/gameover.mp3" id="1_5s300"]
[ext_resource type="Script" path="res://scripts/gameover.gd" id="1_gwi6d"]
[ext_resource type="FontFile" uid="uid://bl3bymtyp0t5x" path="res://scenes/Menus/ChiKareGo.ttf" id="2_bpbs5"]
[ext_resource type="AudioStream" uid="uid://4cm8r2pl2i8d" path="res://music/Select.wav" id="3_7x5wt"]

[node name="gameover" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gwi6d")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.164706, 0, 0.160784, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bpbs5")
theme_override_font_sizes/font_size = 72
text = "Game Over

"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bpbs5")
theme_override_font_sizes/font_size = 24
text = ">"

[node name="option" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bpbs5")
theme_override_font_sizes/font_size = 52
text = "Retry"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bpbs5")
theme_override_font_sizes/font_size = 24
text = ">"

[node name="option" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bpbs5")
theme_override_font_sizes/font_size = 52
text = "Settings"

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bpbs5")
theme_override_font_sizes/font_size = 24
text = ">"

[node name="option" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bpbs5")
theme_override_font_sizes/font_size = 52
text = "Exit"

[node name="gameoverbgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_5s300")
volume_db = -15.0
autoplay = true

[node name="gmselectsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7x5wt")
